--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.1.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.1",
