--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "personal-portfolio",
+  "name": "hack-overlfow-1.0",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/lab": "^5.0.0-alpha.117",
+    "@mui/material": "^5.11.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,13 +20,16 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.2",
+    "react-countdown": "^2.3.5",
+    "react-countdown-circle-timer": "^3.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.1.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.3.0",
+    "react-router": "^6.7.0",
+    "react-router-dom": "^6.7.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
