--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "lottie-react": "^2.3.1",
     "nodemailer": "^6.7.5",
     "process": "^0.11.10",
     "react": "^18.1.0",
