--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tomtom-international/web-sdk-maps": "^6.23.0",
     "animate.css": "^4.1.1",
+    "animejs": "^3.2.1",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
