--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tomtom-international/web-sdk-maps": "^6.23.0",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "framer-motion": "^8.5.4",
     "lottie-react": "^2.3.1",
     "nodemailer": "^6.7.5",
     "process": "^0.11.10",
@@ -59,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.4"
   }
 }
