--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/lab": "^5.0.0-alpha.117",
     "@mui/material": "^5.11.6",
     "@testing-library/jest-dom": "^5.16.4",
@@ -17,7 +18,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "framer-motion": "^8.5.4",
+    "framer-motion": "^8.5.5",
     "lottie-react": "^2.3.1",
     "nodemailer": "^6.7.5",
     "process": "^0.11.10",
