--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "framer-motion": "^8.5.5",
@@ -23,7 +23,8 @@
     "nodemailer": "^6.7.5",
     "process": "^0.11.10",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.4.0",
+    "react-auto-image-slider": "^1.0.0",
+    "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.8.2",
     "react-countdown": "^2.3.5",
     "react-countdown-circle-timer": "^3.1.0",
@@ -37,6 +38,7 @@
     "react-router-dom": "^6.7.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
