--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aos": "^2.3.4",
     "axios": "^1.3.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.10.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "framer-motion": "^8.5.5",
