--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@emotion/styled": "^11.10.5",
     "@leenguyen/react-flip-clock-countdown": "^1.4.0",
     "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.117",
     "@mui/material": "^5.11.8",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -43,6 +43,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
+    "styled-components": "^5.3.6",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
