--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dracula-ui": "^1.0.6",
     "express": "^4.18.1",
     "framer-motion": "^8.5.5",
+    "gapi-script": "^1.2.0",
     "lottie-react": "^2.3.1",
     "nodemailer": "^6.7.5",
     "process": "^0.11.10",
