--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@rumess/react-flip-countdown": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -43,6 +44,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
+    "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.6",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
