--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-countdown-circle-timer": "^3.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.1.0",
+    "react-ga": "^3.3.1",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
     "react-responsive-carousel": "^3.2.23",
