--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-router-dom": "^6.7.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "source-map-loader": "^4.0.1",
