--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-countup": "^6.4.0",
     "react-dom": "^18.1.0",
     "react-ga": "^3.3.1",
+    "react-globe.gl": "^2.23.3",
     "react-intersection-observer": "^9.4.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
