--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "dracula-ui": "^1.0.6",
     "express": "^4.18.1",
+    "flowbite": "^2.2.1",
     "framer-motion": "^8.5.5",
     "gapi-script": "^1.2.0",
     "lottie-react": "^2.3.1",
