--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@formkit/auto-animate": "^0.8.1",
     "@leenguyen/react-flip-clock-countdown": "^1.4.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
@@ -54,6 +56,7 @@
     "sass-loader": "^13.2.0",
     "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.6",
+    "swiper": "^11.0.5",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
