--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^4.1.2",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "source-map-loader": "^4.0.1",
