--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
+    "react-photo-album": "^2.3.1",
     "react-preloaders": "^3.0.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.7.0",
