--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-ga": "^3.3.1",
     "react-globe.gl": "^2.23.3",
     "react-intersection-observer": "^9.4.3",
+    "react-lazy-load-image-component": "^1.6.0",
+    "react-lazyload": "^3.2.0",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
     "react-photo-album": "^2.3.1",
