Preloader Context update

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@formkit/auto-animate": "^0.8.1",
+    "@kommunicate/kommunicate-chatbot-plugin": "^0.0.7",
     "@leenguyen/react-flip-clock-countdown": "^1.4.0",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.11.8",
@@ -54,6 +55,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-simple-maps": "^3.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "react-tooltip": "^4.1.2",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
