--- a/package.json
+++ b/package.json
@@ -3,46 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/react": "^2.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@formkit/auto-animate": "^0.8.1",
+    "@formkit/auto-animate": "^0.8.2",
     "@kommunicate/kommunicate-chatbot-plugin": "^0.0.7",
-    "@leenguyen/react-flip-clock-countdown": "^1.4.0",
-    "@mui/icons-material": "^5.15.11",
-    "@mui/material": "^5.11.8",
+    "@leenguyen/react-flip-clock-countdown": "^1.6.1",
+    "@mui/icons-material": "^5.16.14",
+    "@mui/material": "^5.16.14",
     "@mui/styled-engine-sc": "^5.11.0",
     "@rumess/react-flip-countdown": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tomtom-international/web-sdk-maps": "^6.23.0",
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
     "animate.css": "^4.1.1",
     "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "axios": "^1.3.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.10.3",
     "cors": "^2.8.5",
+    "d3-scale": "^4.0.2",
     "dotenv": "^16.3.1",
     "dracula-ui": "^1.0.6",
     "express": "^4.18.1",
     "flowbite": "^2.2.1",
     "framer-motion": "^8.5.5",
     "gapi-script": "^1.2.0",
-    "lottie-react": "^2.3.1",
+    "lottie-react": "^2.4.1",
     "nodemailer": "^6.7.5",
     "process": "^0.11.10",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-auto-image-slider": "^1.0.0",
-    "react-bootstrap": "^2.7.0",
+    "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.8.2",
     "react-countdown": "^2.3.5",
     "react-countdown-circle-timer": "^3.1.0",
-    "react-countup": "^6.4.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.1.0",
     "react-ga": "^3.3.1",
     "react-globe.gl": "^2.23.3",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.4.3",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
@@ -50,18 +53,18 @@
     "react-preloaders": "^3.0.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.7.0",
-    "react-router-dom": "^6.7.0",
+    "react-router-dom": "^7.1.5",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
     "react-simple-maps": "^3.0.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-tooltip": "^4.1.2",
+    "react-tooltip": "^4.5.1",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "source-map-loader": "^4.0.1",
     "styled-components": "^5.3.6",
-    "swiper": "^11.0.5",
+    "swiper": "^11.2.2",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
