--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hack-overlfow-2.0",
-  "version": "0.1.0",
+  "name": "hack-overlfow-3.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.10.5",
@@ -97,5 +97,9 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.2.4"
+  },
+  "engines": {
+    "node": "16.x",
+    "npm": "~1.0.20"
   }
 }
