--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@mui/icons-material": "^5.16.14",
     "@mui/material": "^5.16.14",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-chakra-ui": "^2.3.1",
+    "@react-buddy/palette-mui": "^5.0.1",
     "@rumess/react-flip-countdown": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -35,14 +38,14 @@
     "nodemailer": "^6.7.5",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
+    "react": "^18.3.1",
     "react-auto-image-slider": "^1.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.8.2",
     "react-countdown": "^2.3.5",
     "react-countdown-circle-timer": "^3.1.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.3.1",
     "react-ga": "^3.3.1",
     "react-globe.gl": "^2.23.3",
     "react-icons": "^5.4.0",
@@ -66,10 +69,7 @@
     "styled-components": "^5.3.6",
     "swiper": "^11.2.2",
     "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4",
-    "@react-buddy/ide-toolbox": "^2.4.0",
-    "@react-buddy/palette-chakra-ui": "^2.3.1",
-    "@react-buddy/palette-mui": "^5.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
