--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@mui/material": "^5.16.14",
     "@mui/styled-engine-sc": "^5.11.0",
     "@react-buddy/ide-toolbox": "^2.4.0",
-    "@react-buddy/palette-chakra-ui": "^2.3.2",
-    "@react-buddy/palette-mui": "^5.0.2",
+    "@react-buddy/palette-chakra-ui": "^2.3.1",
+    "@react-buddy/palette-mui": "^5.0.1",
     "@rumess/react-flip-countdown": "^1.2.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -50,6 +50,7 @@
     "react-globe.gl": "^2.23.3",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.4.3",
+    "react-lazyload": "^3.2.1",
     "react-multi-carousel": "^2.8.1",
     "react-on-screen": "^2.1.1",
     "react-photo-album": "^2.3.1",
@@ -69,10 +70,7 @@
     "styled-components": "^5.3.6",
     "swiper": "^11.2.2",
     "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4",
-    "@react-buddy/ide-toolbox": "^2.4.0",
-    "@react-buddy/palette-chakra-ui": "^2.3.1",
-    "@react-buddy/palette-mui": "^5.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
